+ #219 (Framework)(New) Added ICompositeStepBuilder.WithContext() overloads allowing to create context using resolver and running additional configuration of the resolved instance with Action<TContext> onConfigure
+ #219 (LightBDD.Autofac)(Change) Updated Autofac integration to implement IDependencyContainerV2 and support InstancePerMatchingLifetimeScope(LifetimeScope.Scenario) registrations
+ #214 (all) Updated all projects to target netstandard2.0 and net461, retiring previous framework support

Version 3.2.0
----------------------------------------
+ #206 (all)(New) Added explicit netstandard2.0 support to simplify dependency resolution
+ #210 (LightBDD.Fixie2)(Change) Updated Fixie version to 2.2.1
+ #210 (LightBDD.MsTest2)(Change) Updated MSTest.TestFramework version to 2.1.1
+ #210 (LightBDD.NUnit3)(Change) Updated NUnit version to 3.12.0
+ #210 (LightBDD.XUnit2)(Change) Updated xunit version to 2.4.1

Version 3.1.1
----------------------------------------
Summary:
+ #181 (Framework)(Change) Improved compact step parsing and rendering
+ #182 (Framework)(Change) Made step parsing issues easily discoverable
+ #185 (LightBDD.XUnit2)(Fix) Using skip feature with XUnit InlineData attribute throws InvalidOperationException
+ #187 (Autofac/LightBDD.Extensions.DependencyInjection) Improved disposal behavior of pre-configured DI containers
+ #199 (Framework)(Change) Improved Html/Xml/Text reports to present scenarios orderly manner
Details:
+ #181 (Framework)(Change) Improved compact steps formatting to exclude control characters, don't perform additional formatting and render properly in HTML reports
+ #181 (Core)(Change) Updated StepDescriptor with configurable IsNameFormattingRequired property, controlling if RawName should be formatted or not
+ #182 (Core)(New) Implemented StepDescriptor.CreateInvalid(Exception ex) for creating step descriptors that failed to initialize