@@ -3,17 +3,16 @@ using System.Collections.Generic;
 using System.Linq;
 using System.Runtime.ExceptionServices;
 using LightBDD.Core.Dependencies;
-using Microsoft.Extensions.DependencyInjection;
 
 namespace LightBDD.Extensions.DependencyInjection.Implementation
 {
     internal class DiContainer : IDependencyContainerV2
     {
-        private readonly IServiceScope _scope;
+        private readonly IContainerScope _scope;
         private readonly ContainerOverrides _overrides;
         private readonly List<IDisposable> _disposables = new List<IDisposable>();
 
-        public DiContainer(IServiceScope scope, ContainerOverrides overrides)
+        public DiContainer(IContainerScope scope, ContainerOverrides overrides)
         {
             overrides.RegisterInstance(this, new RegistrationOptions().ExternallyOwned().As<IDependencyContainer>().As<IDependencyResolver>());
 
@@ -24,7 +23,7 @@ namespace LightBDD.Extensions.DependencyInjection.Implementation
 
         public object Resolve(Type type)
         {
-            return _overrides.TryResolve(type) ?? _scope.ServiceProvider.GetRequiredService(type);
+            return _overrides.TryResolve(type) ?? _scope.Resolve(type);
         }
 
         public void Dispose()
@@ -57,7 +56,7 @@ namespace LightBDD.Extensions.DependencyInjection.Implementation
             var overrides = new ContainerOverrides();
             configuration?.Invoke(overrides);
 
-            return new DiContainer(_scope.ServiceProvider.CreateScope(), overrides);
+            return new DiContainer(_scope.BeginScope(scope), overrides);
         }
 
         public void AddDisposable(IDisposable serviceProvider)
